# Qt

mList/: .gitignore  .gitmodules  CMakeLists.txt
mList/Qt-mlist/: CMakeLists.txt  application.cpp  application.h  application_global.h  artikel.cpp  artikel.h  cache.cpp  cache.h  feedback.cpp  feedback.h  konsum.cpp  konsum.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlist.pro  person.cpp  person.h  qrc_mlist.qrc
mList/Qt-mlist-abrechnung/: CMakeLists.txt  abrechnung.cpp  abrechnung.h  application.cpp  application.h  application_globals.h  artikel.cpp  cache.cpp  cache.h  konsum.cpp  konsum.h  main.cpp  mlist_abrechnung.pro  mlistabrechnung.cpp  mlistabrechnung.h  person.cpp
